added some js and vote onClick working

--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,19 @@
         <div class="row ">
             <div class="col-12">
                 <form  method="post" id="vote-form">
-                    <h3 class="my-3">Dtoolz TV Series Voting Web App</h3>
-                    <h6 class="text-capitalize">hi series lovers, pls vote for your favorite tv series. </h6>
+                    <h3 class="my-3 text-capitalize"><span class="text-success">dtoolz</span> <span class="text-primary"> TV</span> <span class="text-danger">series</span> <span class="text-info">web</span> <span class="text-warning">app</span></h3>
+                    <h5 class="text-capitalize my-3 lead font-weight-normal">hi series lovers, please vote for your favorite tv series. </h5>
                     <div class="my-3 text-capitalize">
                         <div class=" my-3 custom-control custom-radio">
                             <input type="radio" id="customRadio1" name="tv" class="custom-control-input" value="Vikings">
                             <label class="custom-control-label" for="customRadio1">vikings</label>
                           </div>
                           <div class="my-3 custom-control custom-radio">
-                            <input type="radio" id="customRadio2" name="tv" class="custom-control-input" value="PrisonBreak">
+                            <input type="radio" id="customRadio2" name="tv" class="custom-control-input" value="Prison Break">
                             <label class="custom-control-label" for="customRadio2">prison break</label>
                           </div>
                           <div class="my-3 custom-control custom-radio">
-                            <input type="radio" id="customRadio3" name="tv" class="custom-control-input" value="Got">
+                            <input type="radio" id="customRadio3" name="tv" class="custom-control-input" value="Game Of Thrones">
                             <label class="custom-control-label" for="customRadio3">game of thrones</label>
                           </div>
                           <div class="my-3 custom-control custom-radio">
@@ -33,17 +33,17 @@
                             <label class="custom-control-label" for="customRadio4">merlin</label>
                           </div>
                           <div class="my-3 custom-control custom-radio">
-                            <input type="radio" id="customRadio5" name="tv" class="custom-control-input" value="Lots">
+                            <input type="radio" id="customRadio5" name="tv" class="custom-control-input" value="Legend Of The Seeker">
                             <label class="custom-control-label" for="customRadio5">legend of the seeker</label>
                           </div>
                           <div class="my-3 custom-control custom-radio">
-                            <input type="radio" id="customRadio6" name="tv" class="custom-control-input" value="SomethingElse">
+                            <input type="radio" id="customRadio6" name="tv" class="custom-control-input" value="Something Else">
                             <label class="custom-control-label" for="customRadio6">something else</label>
                           </div>
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Vote">
+                    <input type="submit" class="mb-5 btn btn-primary" value="Vote">
                 </form>
-                <div id="chartContainer" style="height: 300px;width: 100%"></div>
+                <div id="chartSection" style="height: 300px;width: 100%"></div>
             </div>
             
         </div>
